--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1,8 +1,8 @@
 %
-%  $Description: The Dissident File System - CMPS221: Advanced Operating Systems.  
+%  $Description: The Dissident File System Design - CMPS229: Storage Systems. 
 %
 
-\documentclass[10pt,twocolumn]{article} 
+\documentclass[10pt,onecolumn]{article}
 \usepackage{times,mathptmx,fullpage}
 % Allows you to put literal text into your document without having
 % LaTeX try to interpret it.
@@ -15,6 +15,7 @@
 % after text in a macro
 \usepackage{xspace}
 \usepackage{graphicx}
+\usepackage{amsmath}
 \graphicspath{/}
 
 % Redefine the percentage of the page that can be used for floats (figures,
@@ -54,106 +55,117 @@
 Aneesh Neelam \\
 \textit{Univ. of California, Santa Cruz} \\
 \textit{aneelam@ucsc.edu}
+\and
+Darrell D. E. Long \\
+\textit{Univ. of California, Santa Cruz} \\
+\textit{darrell@ucsc.edu}
 }
 
 \maketitle
 \thispagestyle{empty}
 
 \begin{abstract}
-We present the Dissident Filesystem, a Filesystem in Userspace (FUSE) that combines aspects of steganography and encryption to protect data from untrusted parties. It stores data blocks in plain sight, but individual data blocks are meaningless, requiring a combination of data blocks to obtain the actual data. The filesystem has been developed primarily for GNU/Linux systems. However, it can easily be made to work with any operating system that supports the FUSE API. 
+
+Dissidents under authoritative governments may not have the equivalent of the United States' Fifth Amendment protections. Therefore cannot just encrypt their data without being subjected to rubber hose attacks. Also, traditional steganography cannot be used under such circumstances, as it will be broken eventually by the State, given enough time and effort. Even in chaotic systems, there will be a pattern of limited predictability.  The dissident file system combines aspects of steganography and encryption to protect data from untrusted parties, and attempts to provide the dissident with a means of plausible deniability. 
+
 \end{abstract}
 
 %------------------------------------------------------------------------- 
-\section{Introduction}
+\section{Introduction and Assumptions}
 
-Dissidents may use many tools to protect their digital data, online identity, etc. from an authoritarian government. But these tools have their advantages and disadvantages. Depending on the laws of the State and the legal precedents established, the dissident may be compelled to reveal incriminating data to the State ~\cite{ex2}. Failure to do so can lead to severe fines and imprisonment.  Therefore, it is not enough for the dissident to use the tool to conceal data or identity, but also conceal the use of such a tool from the State. Hence, both encryption and steganography must be applied for this. 
+In this paper, we shall talk about the design and implementation details of the dissident file system. Some explanations on why certain algorithms, tools, and design patterns were chosen along with their tradeoffs are also described in detail in this paper. However, this design and implementation shall be improved upon later as we have detailed in Section 6. 
 
-The biggest problem with encryption is that you can not easily hide the fact that you are doing so. If a third party analyzes the data blocks, they may not be able to read the data, but they can conclude that it has been encrypted. They can then ask for the encryption key. In countries such as the United States, you cannot be compelled to reveal anything that incriminates you ~\cite{ex12}. However, not all States have such legal protections.  Unfortunately, there are some which even torture for such information. An encrypted filesystem cannot be read without the decryption key(s), but the State can compel the dissident to decrypt it or share the decryption key(s) ~\cite{ex2,ex10}. 
-
-Steganography is used to hide the presence of a message from a third party ~\cite{ex3}. But, it does not protect the data itself if the presence is known. Hence, just steganography is not a feasible option. Even in chaotic systems, a discernible pattern with limited predictability can be found. Also, by analyzing the size of the data and the content, anomalies will be found and the use of steganography can be detected ~\cite{ex3}. The State can eventually retrieve the dissident’s data from the disk drives. 
-
-The Dissident filesystem employs both encryption and steganography. A data block stored on the Dissident filesystem is split into multiple blocks, each of which does not produce the original data by themselves, but combined they can be used to construct the original data. These blocks can be placed all over the filesystem, and only using a private key can one ascertain which data blocks correspond to which files. It has been implemented using the FUSE API, which is supported by many POSIX systems, including OS X, Linux, and FreeBSD ~\cite{ex1}. 
-
-In the next section, we shall see the approaches that others have taken to solve this problem of safeguarding data while maintaining plausible deniability. In Section III, we shall describe how the Dissident File System is implemented, how it works and how it attempts to solve this problem. In Section IV, we shall talk about the current state of the implementation, and its limitations, and evaluate its performance. We shall then conclude and discuss future work in Section V. 
+The dissident file system does not protect the dissident from being discovered via other sources, such as online or physical surveillance, etc. It only serves to protect the data on the storage device. 
 
 %------------------------------------------------------------------------- 
-\section{Related Work}
+\section{Design}
 
-A lot of work has been done to protect data stored on disks from third parties. Various encryption algorithms have been devised and implemented in a variety of languages and for many platforms. There are two primary kinds of encryption for data stored on disks: Disk Encryption and Filesystem encryption. 
+The dissident file system uses harmless, ``innocent'' files to ``encrypt'' sensitive files. It is a layer on top the existing file system. The objective is to ensure that these sensitive files cannot be made sense of without making use of the dissident file system. The dissident file system must be a layer on top of the existing ``normal'' one, as the very absence of any normally readable files on the disk is a red flag.  
 
-Disk encryption encrypts the entire disk, including the free space ~\cite{ex4,ex5,ex6}. There are ways to defeat this mechanism, however. It is possible to use a keylogger to capture the key when the user is entering it. Another method is called a cold-boot attack, where the key may be stored in RAM for comparison and since DRAM and SRAM are still readable for a few seconds after the system is shutdown, the contents of the RAM may be dumped and analyzed ~\cite{ex7}. Various mechanisms to speed up disk encryption have been developed. Newer CPU architectures have special AES instructions and specialized hardware for encrypting and decrypting data that is encrypted using the AES algorithm ~\cite{ex8}. 
+Innocent files are those which are completely legal in the specific jurisdiction and are not suspicious for the dissident to have on his or her system. Since, these files are generally specific and customized for the dissident, they must be able to provide them for use in the dissident file system. 
 
-Filesystem encryption, on the other hand, encrypts files individually in the filesystem layer and stores them. When reading the data back, the filesystem seamlessly decrypts the data. IBM developed Encrypted Filesystem (EFS) for the AIX systems which employs this method to safeguard files stored on disk ~\cite{ex9}. 
+However, encryption is not performed in the usual sense in the dissident file system. The sensitive file data when written, shall be XORed with an innocent file and the result is written to the underlying file system. And when reading these files via the dissident file system, the underlying file is then XORed with the corresponding innocent file to obtain the actual data. 
 
-Both disk and filesystem level encryption suffer from the same problem: The existence of the data protected using encryption and the use of encryption mechanisms cannot be denied ~\cite{ex2}. 
+We know that if $\mathit{r}$ is random, then $\mathit{q = r \bigoplus d}$ is also random, regardless of what $\mathit{d}$ is. However, the ``innocent'' file cannot be made up of random data. otherwise it cannot be termed “innocent” anymore. 
 
-Steganography has also been employed to safeguard data on disk. The Steganographic File System was developed to give users an element of plausible deniability that encryption alone cannot provide. Users cannot be compelled to divulge the key if the adversary is not aware that the data even exists. The user can confidently deny the existence of the data in such a case ~\cite{ex10}. But, if data hidden using steganography can be found with some level of effort and time. This data is generally not encrypted as that breaks the steganography and subsequently does not offer plausible deniability. 
+Suppose, the sensitive data that is to be written via the dissident file system is a byte array $d$. The innocent file that must be XORed with $d$ can be $a$. Now, assuming that the innocent file is much larger than the sensitive file, the byte array $d$ will be XORed with an offset, $i$, and onward, until the size of $d$. This offset $i$ is randomly generated when writing a new file. Otherwise it is retrieved from a store. The pseudo-random number generator must be cryptographically secure; else the offsets can be reverse engineered by analyzing the dissident file system in execution, or even compromise the security of other instances of the dissident file system on other machines if the random numbers generated are predictable. 
 
-An encryption tool called Truecrypt was developed that also had a plausible deniability feature. The disk is split into two volumes. One volume contains the actual data, the other contains dummy data that the user is willing to sacrifice. Two keys are used to decrypt the disk. One key only decrypts one of the volumes. Hence, the user can give away the key corresponding to the volume with dummy data, if compelled and the sensitive data in the other volume is still safe ~\cite{ex2}. But, the disk can be carefully analyzed and the size of the volume would not add up to the size of the disk, in which case the adversary can compel the user to disclose the actual key ~\cite{ex11}. 
+The file inode numbers and the respective offsets must be written to a file system store, as a file on the underlying file system itself. A key-value pair of inodes and specific offsets, and some other information such as the file path to the respective innocent file and other file system stores may also be stored. 
 
-%------------------------------------------------------------------------- 
-\section{Overview and Implementation}
-
-The Dissident File System reconstructs file blocks by combining (N - 1) random blocks, and one particular block to get the original data. Logical XOR is done on the data of the N blocks, to get the actual data the user wants. The random file blocks are chosen based on a private key specified by the user when the filesystem is mounted. Hence, it uses aspects of encryption and steganography. 
-
-Currently, the Dissident File System is implemented using the FUSE API as a stackable filesystem, specifically for Linux systems. This mechanism is developed for individual files, and the performance of the filesystem has been evaluated on a Linux system. However, it can be adapted trivially to work on other POSIX systems that also support the FUSE API. 
-
-Every file that is written to the Dissident File System is split into N separate data buffers which are generated such that the XOR of data of these buffers will give the original data. When the file is to be read back, the filesystem reads these N files and XORs the data to obtain the original file. Without the private key, the filesystem cannot decide which files are related, and which files to XOR to obtain the original data. 
-
-The Dissident File System offers some level of plausible deniability and also protects the data stored on the disk. The presence of (N - 1) random files gives the user the ability to store dummy data that can safely be exposed to the adversary. And without the private key, the adversary cannot quickly ascertain which of the random files are relevant to reading a particular file. However, the current implementation has certain limitations, and many challenges still need to be addressed that we shall describe in the next section. 
+This file system store is also a file that understandably needs to be protected in the same manner. However, the corresponding offset for this must be determined using a deterministic method. The offset can be chosen based on the cryptographic hash of a pass phrase entered when mounting the dissident file system. 
 
 %------------------------------------------------------------------------- 
-\section{Evaluation}
+\section{Implementation}
 
-In this section, we evaluate the performance of the Dissident File System and also describe some of its limitations and various implementation challenges that we faced. 
+The dissident file system is built using the FUSE API for POSIX systems. This enables compatibility across the different Unix-based and Unix-like systems. But, some aspects of the design and implementation may depend on how the POSIX interface is implemented in that operating system. Hence, we shall assume that this file system will be used on FreeBSD, Linux, and Mac OS X systems. 
 
-\subsection{Performance}
-We ran experiments to gauge the performance of the current implementation of the Dissident File System. We used dd, a command-line utility for Unix that can be used to benchmark drive performance. We used dd to evaluate the read and write performance of files on the Dissident File System and the Linux ext4 filesystem as a basis for comparison. 
+For the file system to work, we need a mechanism to generate random numbers for offsets. We also need a secure hashing algorithm for calculating the offset from the passphrase for the root file system store. And we need a file system store that provides durability and consistency while being able to handle concurrent file system operations. 
 
-We also timed copying large files from the Dissident File System volume to the Linux ext4 filesystem volume and back, and between two Dissident File System volumes and between two ext4 volumes as a basis for comparison. 
+\subsection{Mounting}
 
-All experiments were done on the same Linux virtual machine, with the same configuration and on the same physical hardware. 
+To mount the file system, the parameters required are: the source directory, a target directory/mount point, a passphrase and the file path to the root file system store and the file path to the root innocent file. If the root innocent file is not specified, the dissident file system assumes this to be the first time use, in which case the directory with the innocent files shall also be requested. But, to prevent mistakes, the root file system store file is not overwritten unless explicitly desired by the dissident. 
 
+\subsection{Passphrase}
 
-\begin{figure}[thpb]
-  \centering
-  	\includegraphics[width=\columnwidth]{cp}
-    \caption{Copying a 241938432 bytes file between volumes, using time and cp UNIX utilities. Less is better performance here. dfs here is the Dissident File System. }
-	\label{fig:cp}
-\end{figure}
+The offset for the file system store is calculated using SHA-256, one of the algorithms in the SHA-2 family of cryptographic hashing algorithms. Running SHA-256 on the passphrase results in a 32 byte hash. Taking the most significant byte as the offset, we can then read the root store file. Every subdirectory shall also have its own innocent file and a store, that can be read from the root file system store. These sub-innocent files and sub-stores shall apply to their respective subdirectory. 
 
-\begin{figure}[thpb]
-  \centering
-  	\includegraphics[width=\columnwidth]{dd_read}
-    \caption{Reading a 409600000 bytes file, using time and dd UNIX utilities. More is better performance here.}
-	\label{fig:ddread}
-\end{figure}
+\subsection{First Time Use}
 
-\begin{figure}[thpb]
-  \centering
-  	\includegraphics[width=\columnwidth]{dd_write}
-    \caption{Writing 409600000 bytes to a file, using time and dd UNIX utilities. More is better performance here.}
-	\label{fig:ddwrite}
-\end{figure}
+The file system assumes that the file system is being used for the first time if the root innocent file is not present, and the user chooses to either ignore and overwrite an existing root file system store or provides a path for a new file system store to be created. A directory with the dissident's innocent files must be specified. The path to this directory is also stored in the newly created or truncated file system store. 
 
-As you can see, the performance is severely degraded, as expected on the Dissident File System when compared with a more general filesystem like ext4. 
+\subsection{Random Number Generator}
 
-\subsection{Limitations}
+For generating cryptographically secure random numbers, only hardware-based or at least hardware-backed random number generators must be used. Assuming the dissident will not be able to carry specialized hardware random number generators, we can only rely on hardware-backed ones. 
 
-The current implementation has certain limitations that still need to be addressed. The (N - 1) random file buffers are still not generated arbitrarily. Due to the nature of XOR, it is still possible to ascertain which of these correspond to which file. Also, if there is only a single file stored on the volume, it is trivial to determine the other random files. Generating data such that meaningful data is obtained when XORed with specific files is one of the greatest challenges in this project, and there is still work to be done to perfect this technique. 
+We use the “/dev/random” device file, which uses environmental noise for its entropy pool to obtain the random seeds for the pseudo-random number generator. Implementations of /dev/random by all three systems, are designed to be cryptographically secure and even long lasting keys like SSH, GPG and SSL keys are generated from such hardware-backed entropy systems. /dev/random blocks until a sufficient entropy pool is present to generate a secure random number, a timeout could be present or the user could be instructed to perform tasks on the computer to generate entropy. 
 
-Due to this, the disk can be analyzed carefully, and a skilled adversary with some effort and time might be able to conclude that some form of encryption has been used to protect data. The disclosure of the private key used by the Dissident File System could be compelled by the adversary, actually defeating the filesystem. 
+Since, using /dev/random depletes the entropy pool and each read takes in a fixed stream of bytes, we shall store this sequence and read from /dev/random only if the stored sequence of random numbers are used up. The size of the offset take from the sequence each time will be based on the size of the innocent file. If the innocent file is not larger than the offset taken from the stream of random bytes, sequences of random numbers are only being wasted, depleting the entropy pool unnecessarily. 
 
-Due to the nature of how the filesystem has been conceived, disk space is wasted for this purpose. Every file would take up N-times their original size on the Dissident File System. Reading and writing every file would actually entail reading and writing N different files, which severely hinders performance. It is a tradeoff between plausible deniability and data protection versus efficiency and performance. 
+We can assume that the dissident file system shall be used on system which has user interaction, and not a server which does not have these sources of entropy. However, some servers also require cryptographically secure random numbers for securing data on the network. Hence, such servers are configured to obtain entropy for random number generation from other sources on the internet. 
+
+/dev/random Implementations: 
+\begin{itemize}
+\item On Linux systems, the /dev/random device takes environmental noise from device drivers into an entropy pool. From this pool cryptographically secure random numbers can be generated.  On Linux, however, /dev/urandom does not block if a sufficient entropy pool is not present. Hence, /dev/urandom on Linux is not recommended for cryptographic algorithms. 
+\item On Mac OS X, the /dev/random device uses the Yarrow algorithm devised by John Kelsey, Bruce Schneier and Niels Ferguson, and implemented by Apple. It uses various sources of entropy to seed its random number generator. 
+\item On FreeBSD, the /dev/random device uses the Fortuna pseudo random number generator by Bruce Schneier and Niels Ferguson, and implemented by the FreeBSD developers. It also uses various sources of entropy to seed its random number generator, and is similar to Yarrow. 
+\end{itemize}
+
+\subsection{File System Store}
+
+BerkeleyDB is an embedded key-value database library that can be incorporated into applications. It supports concurrent requests, which are necessary for a file system. It is supported on FreeBSD, Linux, and Mac OS X. 
+
+Since the inode numbers do not change unless the file is moved, it can be used as a key for the file system store. The offsets must be stored with the respective inode numbers in the dissident file system store. For a randomly generated offset $i$, and a file size $s$, the corresponding innocent file needed ranges from $i$ to $i + s$. If $i + s$ becomes greater than the size of the innocent file itself, the modulus operator can be used to go back to the start of the file. This provides an apparent endless continuity to the innocent file. 
+
+When appending or updating data in-place to an existing file, one must calculate the starting offset by taking the existing offset and adding the specified offset or the original file size to obtain the offset of the innocent file to XOR with. 
 
 %------------------------------------------------------------------------- 
-\section{Conclusion}
+\section{Trade offs}
 
-The Dissident File System uses aspects of steganography and encryption to achieve plausible deniability and to also protect the data. Blocks are placed all over the filesystem and the original data is never stored plainly in any one of them. The location of the blocks is ascertained using a private key. 
+Here we talk about some of the problems that this design and implementation can have. We hope to perfect the design as we go along. 
 
-The concept and the implementation can be improved upon to combat the severe performance degradation and also make it more reliable and secure. The current implementation is not very efficient, perhaps the reading and writing of the N blocks could be made concurrent, enabling parallelism. This will greatly improve performance, especially on flash-based persistent storage devices like Solid State Drives. 
+The most significant byte of the cryptographic hash of the passphrase is chosen to be the offset of the root file system store. However, this can be a parameter given when mounting if necessary. 1 byte would mean that the innocent files must be at least 4 Gigabytes to be fully effective, but it is not an absolute requirement. 
 
-Currently, the Dissident File System is implemented as a stackable filesystem. This is to quickly have a prototype that makes use of the idea, rather than to spend time and effort designing the filesystem. In the future it can be implemented as an independent filesystem that can be used directly on any device or file. 
+Deliberate manipulation of the sensitive files or even the innocent files from the underlying normal file system can destroy the data. The underlying file system does not do so as part of its normal execution, the user themselves or a program must deliberately be instructed to manipulate the data from the underlying file system for the sensitive files to be destroyed. The file names (and paths) are still unique in this case, and hence, the underlying normal file system would not overwrite these files unless explicitly performed. 
+
+We are not XORing random data at all; we are only choosing non-random innocent data at random. This is a tradeoff as it may be more statistically insecure than using actual random data. However, we assume that innocent files are easier to pass off than random files. Also, if the innocent files themselves are compressed files, the entropy of the innocent file itself is higher, making the innocent data itself more ``random-like''. 
+
+There are still XORed files all over the file system; these represent the actual sensitive data. However, since these files are generally smaller in number and smaller in size when compared to the ``innocent'' files used, the dissident may be able to pass them off as file system corruption. As part of future work, we can look at storing these files on a separate partition that is seemingly unallocated when scanning the disk, or on the free space of existing partitions. But specialized storage hardware that may attempt to hide this information may not be feasible as the very presence of such a device raises a red flag. 
+
+%------------------------------------------------------------------------- 
+\section{Analysis}
+
+In this section we talk about the performance and also some attack vectors. 
+
+Since, XORing data from multiple different sources requires more computation than simply reading one source to read a file, it is expected to be much slower than the underlying normal file system. However, since that is not the goal this overhead can be termed acceptable. 
+
+The adversary is assumed to be a government which is highly motivated and capable with almost unlimited resources. To reverse engineer the offsets, one must be able to break the randomness of the machine, and the SHA-256 algorithm. Since, these algorithms are known to be cryptographically secure for now as breaking them is computationally unfeasible for the foreseeable future. Therefore, we can use them to generate random numbers for offsets and to hash the passphrase. 
+
+It is possible to break the randomness of the machine by compromising the entropy sources. However, that only compromises the random numbers generated since then, not the ones already generated before. 
+
+%------------------------------------------------------------------------- 
+\section{Future Work}
+
+Since storing the sensitive data, even in XORed form on the disk as files are still visible on the underlying file system. This can be highly suspicious and opens up the dissident to rubber hose attacks. We hope to be able to store this data in the free blocks or space of the underlying file system or disk. That would require special error correcting codes and recovery methods as the free space can be overwritten by the underlying file system when writing normally, destroying the sensitive data. 
 
 %------------------------------------------------------------------------- 
 \bibliographystyle{latex8}
